--- a/index.html
+++ b/index.html
@@ -149,7 +149,18 @@
                 <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
                     <!-- Left Panel: Inputs -->
                     <div class="lg:col-span-1 space-y-6 card p-6 rounded-xl">
-                        <div>
+                        <!-- Adsterra ad code start -->
+<script type="text/javascript">
+  atOptions = {
+    'key' : '855a1c40ae9f84a8b4cc38f2c1bc66ab',
+    'format' : 'iframe',
+    'height' : 60,
+    'width' : 468,
+    'params' : {}
+  };
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/855a1c40ae9f84a8b4cc38f2c1bc66ab/invoke.js"></script>
+<!-- Adsterra ad code end -->
                             <label for="description" class="block text-sm font-medium text-gray-300 mb-2">Image Description (Prompt)</label>
                             <textarea id="description" rows="4" class="w-full bg-gray-900/50 border border-gray-600 rounded-lg p-3 focus:ring-2 focus:ring-purple-500 focus:border-purple-500 outline-none transition" placeholder="e.g., A majestic lion wearing a crown, cinematic lighting..."></textarea>
                         </div>
@@ -447,6 +458,7 @@
     </script>
 </body>
 </html>
+
 
 
 
